--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -34,8 +34,10 @@
     <!--first section-->
     <div class="container">
         <h4>Latest Mars News</h4>
-        <h5>{{mars_data.mars_news.news_title}}</h5>
-        <p>{{mars_data.mars_news.news_p}}</p>
+        <h5>{{mars_data.news_title}}</h5>
+        
+        <p>{{mars_data.news_p}}</p>
+        
     </div>
 
 
